ensure shopify dialog text is legible

--- a/shopify/c-claire-embroidery-4517373/sass/checkout-extras.scss
+++ b/shopify/c-claire-embroidery-4517373/sass/checkout-extras.scss
@@ -14,4 +14,8 @@ body {
     @import 'notifications';
     @import 'form-validation';
     @import 'checkout';
+
+    .shopify-dialog {
+        color: black !important;
+    }
 }
